tests/snapshots/execution_spec__test-const-error.md_errors.snap
---
source: tests/execution_spec.rs
expression: errors
---
[
  {
    "message": "expected field to be non-nullable",
    "trace": [
      "Query",
      "user",
      "@expr",
      "age"
    ],
    "description": null
  }
]
