tests/snapshots/execution_spec__test-const-nullable.md_query_0.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "data": {
    "user": {
      "age": null,
      "name": "John"
    }
  }
}
