tests/snapshots/execution_spec__test-const-query.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
type Query {
  user: User
}

type User {
  age: Int
  name: String
}

schema {
  query: Query
}
