tests/snapshots/execution_spec__test-const-query.md_query_0.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "data": {
    "user": {
      "age": 12,
      "name": "John"
    }
  }
}
