tests/snapshots/execution_spec__test-const-with-inline.md_errors.snap
---
source: tests/execution_spec.rs
expression: errors
---
[
  {
    "message": "Cannot add field",
    "trace": [
      "Query",
      "@addField"
    ],
    "description": "Path: [post, user, name] contains resolver const at [Post.user]"
  }
]
