tests/snapshots/execution_spec__test-const-with-mustache-nested.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
type A {
  a: Int
  bc: BC
}

type BC {
  d: D
}

type D {
  e: Int
}

type Query {
  a: A
}

schema {
  query: Query
}
