tests/snapshots/execution_spec__test-const-with-mustache-nested.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @server @upstream {
  query: Query
}

type A {
  a: Int
  bc: BC @const(data: {d: "{{value.d}}", f: "{{value.f}}"})
  d: D @modify(omit: true)
}

type BC {
  d: D
  f: Boolean
}

type D {
  e: Int
}

type Query {
  a: A @const(data: {a: 0, d: {e: 1}, f: true})
}
