tests/snapshots/execution_spec__test-const-with-mustache.md_assert_0.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "a": {
        "bc": {
          "b": 1,
          "c": 2
        }
      }
    }
  }
}
