tests/snapshots/execution_spec__test-const-with-mustache.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
type A {
  a: Int
  bc: BC
}

type BC {
  b: [Int]
  c: String
  d: Int
  f: D
  g: Boolean
}

type D {
  e: Int
}

scalar Date

scalar Email

scalar JSON

scalar PhoneNumber

type Query {
  a: A
}

scalar Url

schema {
  query: Query
}
