tests/snapshots/execution_spec__test-const-with-mustache.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @server @upstream {
  query: Query
}

type A {
  a: Int
  b: [Int] @modify(omit: true)
  bc: BC @const(data: {b: "{{value.b}}", c: "{{value.c}}"})
  c: String @modify(omit: true)
}

type BC {
  b: [Int]
  c: String
}

type Query {
  a: A @const(data: {a: 0, b: [1, 2, 3], c: "test"})
}
